# OCCT-Lessions

./: .gitattributes  .gitignore  README.md
Lesson04_HelloOpenCascade/: CMakeLists.txt  GlfwOcctViewer.cpp
Lesson04_HelloOpenCascade/build-cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Lesson_04.sln  Lesson_04.vcxproj  Lesson_04.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Lesson04_HelloOpenCascade_Glfw/: CMakeLists.txt  GlfwOcctViewer.cpp  GlfwOcctViewer.h  GlfwOcctWindow.cpp  ViewerInteractor.cpp  ViewerInteractor.h  main.cpp
Lesson10_OCAF_from-scratch/: CMakeLists.txt  Dockerfile  README
Lesson10_OCAF_from-scratch/src/: main.cpp
Lesson11_OCAF_interfaces/: CMakeLists.txt  README
Lesson11_OCAF_interfaces/src/: main.cpp
Lesson12_XDE/: CMakeLists.txt  DisplayScene.cpp  DisplayScene.h  README  main.cpp
Lesson12_XDE_Glfw/: CMakeLists.txt  DisplayScene.cpp  GlfwOcctViewer.cpp  GlfwOcctViewer.h  GlfwOcctWindow.h  main.cpp
Lesson13_Intf/: CMakeLists.txt  Viewer.cpp  main.cpp
Lesson14_Intf/: CMakeLists.txt
Lesson14_Qt/build-cmake/: CMakeCache.txt
Lesson15_compose-XDE/: CMakeLists.txt  README  Viewer.h  main.cpp
Lesson16_pmc/: CMakeLists.txt  README
Lesson16_slice/: CMakeLists.txt  KHull2d.cpp  Viewer.cpp  Viewer.h  main.cpp
Lesson17_pmc/: CMakeLists.txt  ClassifyPt.h  Viewer.cpp  main.cpp
Lesson17_pmc_demo/: main.cpp
Lesson17_slice/: CMakeLists.txt  KHull2d.cpp  KHull2d.h  main.cpp
Lesson18_Qt_Widgets/: CMakeLists.txt  Viewer.cpp  Viewer.h  ViewerWidget.cpp  ViewerWidget.h  main.cpp
Lesson20_offsets/: CMakeLists.txt  main.cpp
Lesson21_split-curves/: CMakeLists.txt  ViewerInteractor.cpp  main.cpp
Lesson22_modify-shape/: CMakeLists.txt  main.cpp
Lesson22_modify-shape/data/: shell.brep
Lesson22_project-curves/: Viewer.h  ViewerInteractor.h
Lesson22_project-curves/data/: surface.brep
Lesson23_HLR/: CMakeLists.txt  Timer.h  Viewer.cpp  main.cpp
Lesson23_HLR/data/: tube.brep
Lesson4_HelloOpenCascade/: CMakeLists.txt  Lesson4_HelloOpenCascade.sln  Lesson4_HelloOpenCascade.vcxproj  Lesson4_HelloOpenCascade.vcxproj.filters  Viewer.cpp  main.cpp
docs/: 01_OpenCascade_intro.pptx  02_OpenCascade_OCAF.pptx
extras_BVH/: BVHFacets.cpp  BVHFacets.h  BVHIterator.cpp  BVHIterator.h  CMakeLists.txt  Viewer.cpp  Viewer.h  main.cpp
extras_Dockerfiles/opencascade_ubuntu/: Dockerfile
extras_EntityNames/: CMakeLists.txt  main.cpp
extras_GettingStarted/: CMakeLists.txt  README  Viewer.cpp  Viewer.h  ViewerInteractor.cpp  ViewerInteractor.h  main.cpp
extras_MemLeaks/: CMakeLists.txt  MemTracker.cpp  MemTracker.h  main.cpp
extras_OCAF/: CMakeLists.txt
extras_OCAF/docs/: 2019-Slyadnev_OCAF.pptx
extras_OCAF/src/OcafExApp/: CMakeLists.txt  main.cpp
extras_OCAF/src/OcafExApp/resources/: Plugin  Resources
extras_OCAF/src/OcafExLib/: CMakeLists.txt  OcafEx.h  OcafEx_Application.cpp  OcafEx_Application.h  OcafEx_BinRetrievalDriver.cpp  OcafEx_BinRetrievalDriver.h  OcafEx_BinStorageDriver.cpp  OcafEx_BinStorageDriver.h  OcafEx_BuildOBB.cpp  OcafEx_BuildOBB.h  OcafEx_ILimb.cpp  OcafEx_ILimb.h  OcafEx_IObject.h  OcafEx_ISocket.cpp  OcafEx_ISocket.h  OcafEx_OBBAttr.cpp  OcafEx_OBBAttr.h  OcafEx_OBBDriver.cpp  OcafEx_OBBDriver.h  OcafEx_Plugin.cpp
extras_PMOI/: CMakeLists.txt  main.cpp
extras_PyTest/: Exceptions.py  PartConfiguration.py  README.md  test.py
extras_STEP/: CMakeLists.txt  main.cpp
extras_Threads/: CMakeLists.txt  main.cpp
extras_Unsorted/: 01_2_Offsets.cpp  01_Offsets.cpp  02_BooleansOnCircles.cpp  03_IntersectionOfEdges.cpp
extras_licensecc/: CMakeLists.txt  README  main.cpp
extras_project-curves/: CMakeLists.txt  main.cpp
extras_project-curves/data/: curves.brep
extras_viewerDrag/: CMakeLists.txt  README  Viewer.cpp  Viewer.h  ViewerDraggableObject.cpp  ViewerDraggableObject.h  ViewerInteractor.cpp  ViewerInteractor.h  ViewerWidget.h  main.cpp
extras_viewerManipulator/: CMakeLists.txt  README  ViewerInteractor.cpp  ViewerInteractor.h  ViewerWidget.cpp  main.cpp
extras_viewerNative/: CMakeLists.txt  README  Viewer.cpp  ViewerInteractor.cpp  ViewerInteractor.h  ViewerWidget.cpp  main.cpp
marathon/: CMakeLists.txt  main.cpp
medium_viewerLines/: CMakeLists.txt  README  main.cpp  viewerLines_actions.cpp  viewerLines_actions.h  viewerLines_linePresentation.cpp  viewerLines_linePresentation.h  viewerLines_presentations.cpp  viewerLines_presentations.h  viewerLines_scene.cpp  viewerLines_scene.h  viewerLines_widget.cpp  viewerLines_widget.h
